# webv8

./: .gitignore  CMakeLists.txt  ChangeLog  ReadMe.txt  build-browser.sh  l  la  log  run-browser.sh  基于WebKitGTK内核浏览器源码修改记录.docx
Source/: CMakeLists.txt  (+3 more)
Source/BrowserApp/: AUTHORS  CMakeLists.txt  config.h  function_control.h
Source/BrowserApp/History/: HistoryMng.c  HistoryMng.h
Source/BrowserApp/certificates/: Certificate.c  Certificate.h
Source/BrowserApp/cmake/: FindConvert.cmake  FindIntltool.cmake  GIR.cmake
Source/BrowserApp/config/: CMakeLists.txt
Source/BrowserApp/config/extensions/adblock/: config
Source/BrowserApp/data/: CMakeLists.txt  aboutversion.html  cdosbrowser-private.desktop.in  cdosbrowser.desktop.in  error.html  midori.appdata.xml.in  speeddial-head.html
Source/BrowserApp/data/adblock/: preset_adblock_rule.txt
Source/BrowserApp/data/download/: Create.sql
Source/BrowserApp/data/express_check/: popup.html
Source/BrowserApp/data/fanyi/: seed.js
Source/BrowserApp/data/illegal_query/: popup.html
Source/BrowserApp/data/layout/: settings.glade  single-certificate.glade
Source/BrowserApp/data/night_mode/: nightingale_view_content.js
Source/BrowserApp/data/online_bank/: bank.html  life_assistant_bg.js  life_assistant_config.js  life_assistant_pop.css  life_assistant_pop.js  utils.js
Source/BrowserApp/data/read_mode/: readability.js
Source/BrowserApp/data/root_certificate/: MSIT_Machine_Auth_CA_2.crt  VeriSign_Class3_Extended_Validation_SSL_SGC_CA.crt
Source/BrowserApp/data/weather_inquiry/: all.css  cif.js  main.js  pop.html
Source/BrowserApp/data/websitequery/: background.js  website_query_bg.html
Source/BrowserApp/download/: BrowserDownloadDialog.c  BrowserDownloadDialog.h  BrowserDownloadFile.c  BrowserDownloadFile.h
Source/BrowserApp/extensions/: CMakeLists.txt  about.c  about.vala  addons.c  apps.vala  builtin-extensions-init.vala  car_illegal_query.c  delayed-load.vala  express_query.c  flummi.vala  night_mode.c  online_bank.c  open-with.vala  read_mode.c  statusbar-features.c  tab-panel.h  tabby.vala  transfers.vala  weather_inquiry.c  weather_inquiry.h  youdao_translation.c
Source/BrowserApp/extensions/adblock/: extension.vala  widgets.vala
Source/BrowserApp/icons/: CMakeLists.txt
Source/BrowserApp/katze/: katze-arrayaction.c  katze-item.c  katze-item.h  katze-utils.c  midori-paths.vala  midori-uri.vala
Source/BrowserApp/main/: BrowserMenuBar.c  BrowserMenuBar.h  BrowserWindow.c  TabMng.c  main.c
Source/BrowserApp/midori/: CMakeLists.txt  Certificate.c  cdosbrowser.vapi  main.c  marshal.c  marshal.h  midori-app.c  midori-app.h  midori-bookmarks-db.c  midori-bookmarks-db.h  midori-browser.c  midori-browser.h  midori-download-db.c  midori-download-db.h  midori-download.vala  midori-downloaddatabase.vala  midori-extension.c  midori-frontend.c  midori-history.c  midori-locationaction.c  midori-locationaction.h  midori-notebook.vala  midori-panel.c  midori-panel.h  midori-preferences.c  midori-privatedata.c  midori-searchaction.c  midori-session.c  midori-settings.vala  midori-speeddial.vala  midori-stock.h  midori-tab.vala  midori-view.c  midori-view.h  midori-web-extension-proxy.c  midori-web-extension-proxy.h  midori-websettings.c  midori-websettings.h  midori.h  password-manager.c  (+4 more)
Source/BrowserApp/orig/History/: HistoryMng.h
Source/BrowserApp/orig/certificates/: Certificate.c  Certificate.h
Source/BrowserApp/orig/download/: BrowserDownloadDialog.c  BrowserDownloadFile.c
Source/BrowserApp/orig/main/: BrowserMenuBar.h  BrowserWindow.c  BrowserWindow.h  TabMng.h
Source/BrowserApp/orig/resources/assets/: newtab.css  newtab.html  newtab.js
Source/BrowserApp/orig/resources/layout/: single-certificate.glade
Source/BrowserApp/orig/settings/: BrowserSettingsDialog.c
Source/BrowserApp/panels/: midori-bookmarks.c  midori-extensions.c  midori-history.c
Source/BrowserApp/po/: CMakeLists.txt  en_GB.po  zh_CN.po
Source/BrowserApp/resources/layout/: cuprum-design.glade  settings.glade  single-certificate.glade
Source/BrowserApp/settings/: BrowserSettingsDialog.c  BrowserSettingsDialog.h
Source/BrowserApp/web-extension/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  ephy-embed-form-auth.c  ephy-embed-form-auth.h  ephy-web-extension-main.c  ephy-web-extension-proxy.c.bak  ephy-web-extension.c
Source/BrowserApp/web-extension-base/: config.h  ephy-debug.h  ephy-file-helpers.c  ephy-file-helpers.h  ephy-form-auth-data.c  ephy-form-auth-data.h  ephy-string.h  ephy-uri-helpers.h  ephy-web-dom-utils.c  ephy-web-dom-utils.h
Source/Chromium/: CMakeLists.txt
Source/Chromium/base/: bind_helpers.h  file_util.cc  file_util_posix.cc  gtest_prod_util.h  lazy_instance.h  logging.h  observer_list.h  pickle.cc  platform_file_posix.cc  values.cc
Source/Chromium/base/files/: file_enumerator.cc  file_enumerator.h  file_enumerator_posix.cc  file_posix.cc  important_file_writer.cc  important_file_writer.h  memory_mapped_file.cc  memory_mapped_file_posix.cc  scoped_file.cc  scoped_temp_dir.cc
Source/Chromium/base/json/: json_file_value_serializer.cc  json_parser.cc  json_reader.cc  json_string_value_serializer.cc  json_writer.cc
Source/Chromium/base/memory/: ref_counted.h
Source/Chromium/base/message_loop/: message_loop.h
Source/Chromium/base/posix/: eintr_wrapper.h
Source/Chromium/base/prefs/: json_pref_store.cc  json_pref_store.h  pref_service.cc  pref_value_map.cc
Source/Chromium/base/strings/: safe_sprintf.cc  string_split.cc  string_util.cc  string_util.h
Source/Chromium/base/threading/: thread_restrictions.h
Source/Chromium/base/time/: time.cc  time_posix.cc
Source/midori/midori/: CMakeLists.txt  Certificate.h  katze-separatoraction.c  main.c  midori-app.c  midori-bookmarks-db.c  midori-browser.c  midori-database.vala  midori-extension.c  midori-hsts.c  midori-locationaction.c  midori-panel.c  midori-searchaction.c  midori-settings.vala  midori-speeddial.vala  midori-tab.vala  midori-uri.c  midori-view.c  midori-websettings.c  midori-websettings.h
Source/midori/tests/: CMakeLists.txt
(+711 files in other folders)
